2010-09-28  Johnny Ding  <jnd@chromium.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=41292
        Some windowed plugins did not handle events through EventHandler, so we
        never set right gesture state for those events.
        This change is to set right allowPopupsFromPlugin flag to current
        execution frame, so WeKit can always get right gesture state on Mac.
        From Mac Snow Leopard, the plugin is run under "WebKitPluginHost,app"
        process, that process passes the allowPopupsFromPlugin flag to
        WKPCEvaluate(in NetscapePluginHostProxy.mm), then flag is set in
        NetscapePluginInstanceProxy::evaluate.

        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView sendEvent:isDrawRect:]):

2010-09-28  Jenn Braithwaite  <jennb@chromium.org>

        Reviewed by Dmitry Titov.

        Added oldPage param to FrameLoaderClient::didTransferChildFrameToNewDocument.
        https://bugs.webkit.org/show_bug.cgi?id=46663

        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::didTransferChildFrameToNewDocument):

2010-09-26  Antonio Gomes  <agomes@rim.com>

        Reviewed by Kenneth Rohde Christiansen.

        DRT/Mac nodesFromRect support

        [Mac][DRT] Implement LayoutTestController::nodesFromRect
        https://bugs.webkit.org/show_bug.cgi?id=46580

        Implement nodesFromRect as a private method to access non-exposed Document
        methods, similarly to computedStyleIncludingVisitedInfo.

        * WebView/WebView.mm: Added JSDocument.h and JSNodeList.h to the include list.
        These headers makes it possible to:
        1) Get a Document off of a JSDocument;
        2) Call toJS function, defined in JSNodeList.cpp|h so we can convert RefPtr<NodeList>
        gotten from Document::nodesFromRect to JS bindings.